<resources>
    <string name="app_name">qiita-reader</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="nav_main">投稿</string>
    <string name="nav_tags">タグ</string>
    <string name="nav_settings">設定</string>

    <string name="main_items">すべて</string>
    <string name="main_feeds">フィード</string>

    <string name="tag_latest">新着投稿</string>
    <string name="tag_recently">最近ストックされた投稿</string>

    <string name="tag_posts">投稿</string>
    <string name="tag_followers">フォロワー</string>
    
    <string name="setting_api">API</string>
    <string name="setting_api_per_page">1度に取得する記事</string>
    <string name="setting_api_per_page_description">件数:</string>

    <string name="setting_api_limit">利用制限</string>
    <string name="setting_api_limit_description">認証している状態ではユーザごとに1時間に1000回まで、認証していない状態ではIPアドレスごとに1時間に60回までリクエストを受け付けます。</string>

    <string name="setting_overview">概要</string>
    <string name="setting_overview_oss">オープンソースライセンス</string>
    <string name="setting_overview_oss_description">オープンソースソフトウェアに関するライセンスの詳細</string>
    <string name="setting_overview_build_version">ビルドバージョン</string>
</resources>
