<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_main"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:icon="@drawable/ic_library_books_white_24dp"
            android:title="@string/nav_main" />
        <item
            android:id="@+id/nav_tags"
            android:icon="@drawable/ic_local_offer_white_24dp"
            android:title="@string/nav_tags" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_white_24dp"
            android:title="@string/nav_settings" />

    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
