<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/setting_api"
                android:textColor="@color/colorPrimary"
                />

            <!-- 投稿取得数 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_api_per_page"
                    android:textSize="@dimen/text_large"
                    android:textColor="@color/text_title"
                    />

                <TextView
                    android:id="@+id/per_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xsmall"
                    android:text="@string/setting_api_per_page_description"
                    android:textSize="@dimen/text"
                    android:textColor="@color/text_normal"
                    />

                <SeekBar
                    android:id="@+id/seek_per_page"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xsmall"
                    android:max="100"
                    />

            </LinearLayout>

            <View style="@style/Border"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_api_limit"
                    android:textSize="@dimen/text_large"
                    android:textColor="@color/text_title"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xsmall"
                    android:text="@string/setting_api_limit_description"
                    android:textSize="@dimen/text"
                    android:textColor="@color/text_normal"
                    />

            </LinearLayout>

            <View style="@style/Border"/>

            <!-- アプリ概要 -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:text="@string/setting_overview"
                android:textColor="@color/colorPrimary"
                />

            <!-- ビルドバージョン -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setting_overview_build_version"
                    android:textSize="@dimen/text_large"
                    android:textColor="@color/text_title"
                    />

                <TextView
                    android:id="@+id/build_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_xsmall"
                    android:textSize="@dimen/text"
                    android:textColor="@color/text_normal"
                    />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>